Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-108299

QDoc: Formatting text passed to \caption may cause weird behavior on Windows

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P4: Low
    • 6.5.0 Beta1
    • 6.5.0 FF
    • Build tools: qdoc
    • None
    • Windows
    • 86677683c4 (qt/qttools/dev) 86677683c4 (qt/tqtc-qttools/dev)
    • DaVinci 67

    Description

      https://codereview.qt-project.org/c/qt/qttools/+/425422 attempted to introduce (see eg. PS 30) a test to QDoc that exercises the \caption command and combines it with \b. This seems to work well on macOS and Linux (see the updated expected output for the test in the aforementioned patch set). However, on Windows with VS2019, QDoc drops a newline character, causing CI to fail. Removing the \b from the text passed to \caption removes the problem.

      If text formatting shouldn't be allowed in a \caption, QDoc should warn about the attempt and strip formatting from the output, not mangle it.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            treinio Topi Reiniƶ
            paulwicking Paul Wicking
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes