qdoc: WebXMLGenerator: Handle image captions

WebXMLGenerator did nothing for Atom::CaptionLeft and
CaptionRight. This lead to characters being written
outside elements.

Output image captions as normal paragraphs.

Fixes: QTBUG-108299
Change-Id: Ie7de7a0c94567a393e7a856fca9ad9d5c9340693
Reviewed-by: Paul Wicking <paul.wicking@qt.io>